--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -5,7 +5,6 @@ services:
     build:
       context: './gui-website'
     container_name: 'gui-website'
-    restart: 'on-failure'
     networks:
       - frontend
     ports:
@@ -19,7 +18,6 @@ services:
     build:
       context: './gui-api'
     container_name: 'gui-api'
-    restart: 'on-failure'
     environment:
       DATABASE_URL: postgres://postgres:toor123@db:5432/postgres
       JWT_SECRET: 'toor123'
@@ -32,14 +30,21 @@ services:
     links:
       - db
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   db:
     image: postgres
     container_name: 'gui-db'
-    restart: 'on-failure'
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     environment:
       POSTGRES_PASSWORD: toor123
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
     networks:
       - backend
     volumes:
